# game_shadow

./: .gitignore  CMakeLists.txt
source/: CMakeLists.txt  button.c  button.h  fade_buffer.c  fade_buffer.h  game.c  game.h  hidden.h  light.c  light.h  main.c  main.h  menu.c  menu.h  messages.c  messages.h  player.c  player.h  res.c  res.h  shadow.c  shadow.h  tutorial.c  tutorial.h
source/icon/: CMakeLists.txt
source/scene/: CMakeLists.txt  death.c  death.h  end.c  end.h  game.c  game.h  menu.c  menu.h  tutorial.c  tutorial.h  warning.c  warning.h
